# taskly-bot

./: .gitignore  CMakeLists.txt
libs/my_lib/: CMakeLists.txt
libs/my_lib/include/: my_lib.h
libs/my_lib/src/: my_lib.cpp
src/: main.cpp
src/bot/: BotConfig.cpp  BotConfig.h  DiscordBot.cpp  DiscordBot.h
src/command/: Command.cpp  Command.h  SlashCommandFactory.cpp  SlashCommandFactory.h
src/command/executable/: AddItemCommand.cpp  AddItemCommand.h  CommandExecutable.cpp  CommandExecutable.h  ExecutionContext.cpp  ExecutionContext.h  ExecutionContextBuilder.cpp  ExecutionContextBuilder.h  ICommandExecutable.cpp  ICommandExecutable.h  ListCommand.cpp  ListCommand.h
src/command/registry/: CommandRegistrar.cpp  CommandRegistrar.h  CommandRegistrarEntry.cpp  CommandRegistrarEntry.h
src/data/: DataManager.cpp  DataManager.h
src/todo/: todo_item.cpp  todo_item.h  todo_list.cpp  todo_list.h
src/types/: SimplePtr.cpp  SimplePtr.h  application_state.cpp  application_state.h  bot_config.cpp  bot_config.h  data_writer.cpp  data_writer.h  logger.cpp  logger.h  processor.cpp  processor.h  todo_item.cpp  todo_item.h  todo_list.cpp  todo_list.h
src/utils/: event.cpp  event.h  timer.cpp  timer.h  util.cpp  util.h
